@@ -6,6 +6,7 @@
 #include "../Components/SpriteComponent.h"
 #include "../AssetStore/AssetStore.h"
 #include <SDL2/SDL.h>
+#include <algorithm>
 
 class RenderSystem: public System {
     public:
@@ -15,10 +16,28 @@ class RenderSystem: public System {
         }
 
         void Update(SDL_Renderer* renderer, std::unique_ptr<AssetStore>& assetStore) {
+            // Create a vector with both sprite and transform component of all entities
+            struct RenderableEntity {
+                TransformComponent transformComponent;
+                SpriteComponent spriteComponent;
+            };
+            std::vector<RenderableEntity> renderableEntities;
+            for (auto entity: GetSystemEntities()) {
+                RenderableEntity renderableEntity;
+                renderableEntity.spriteComponent = entity.GetComponent<SpriteComponent>();
+                renderableEntity.transformComponent = entity.GetComponent<TransformComponent>();
+                renderableEntities.emplace_back(renderableEntity);
+            }
+
+            // Sort the vector by the z-index value
+            std::sort(renderableEntities.begin(), renderableEntities.end(), [](const RenderableEntity& a, const RenderableEntity& b) {
+                return a.spriteComponent.zIndex < b.spriteComponent.zIndex;
+            });
+
             // Loop all entities that the system is interested in
-            for (auto entity: GetSystemEntities()){
-                const auto transform = entity.GetComponent<TransformComponent>();
-                const auto sprite = entity.GetComponent<SpriteComponent>();
+            for (auto entity: renderableEntities){
+                const auto transform = entity.transformComponent;
+                const auto sprite = entity.spriteComponent;
 
                 // Set the source rectangle of our original sprite texture
                 SDL_Rect srcRect = sprite.srcRect;
